syntax = "proto3";

package zelvy.user;
option go_package = "github.com/rangodisco/zelvy/gen/zelvy/user";

message AddUserRequest {
  string username = 1;
  string discord_id = 2;
  string paypal_email = 3;
}